syntax = "proto3";
package stride.vesting;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/auth/v1beta1/auth.proto";

option go_package = "github.com/Stride-Labs/stride/v25/x/claim/vesting/types";

// BaseVestingAccount implements the VestingAccount interface. It contains all
// the necessary fields needed for any vesting account implementation.
message BaseVestingAccount {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  cosmos.auth.v1beta1.BaseAccount base_account = 1 [ (gogoproto.embed) = true ];
  repeated cosmos.base.v1beta1.Coin original_vesting = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"original_vesting\""
  ];
  repeated cosmos.base.v1beta1.Coin delegated_free = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"delegated_free\""
  ];
  repeated cosmos.base.v1beta1.Coin delegated_vesting = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"delegated_vesting\""
  ];
  int64 end_time = 5 [ (gogoproto.moretags) = "yaml:\"end_time\"" ];
}

// Period defines a length of time and amount of coins that will vest.
message Period {
  option (gogoproto.goproto_stringer) = false;

  int64 start_time = 1;
  int64 length = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int32 action_type = 4;
}

// StridePeriodicVestingAccount implements the VestingAccount interface. It
// periodically vests by unlocking coins during each specified period.
message StridePeriodicVestingAccount {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  BaseVestingAccount base_vesting_account = 1 [ (gogoproto.embed) = true ];
  repeated Period vesting_periods = 3 [
    (gogoproto.moretags) = "yaml:\"vesting_periods\"",
    (gogoproto.nullable) = false
  ];
}
